[workspace]

members = [
    "aoc_utils",
    "aoc_utils_tests",
    "d1_calorie_counting",
    "d2_rock_paper_scissors",
    "d3_rucksack",
    "d4_camp_cleanup",
    "d5_supply_stacks",
    "d6_tuning_trouble",
    "d7_no_space_left",
    "d8_treetop_tree_house",
    "d9_rope_bridge",
    "d10_cathode_ray_tube",
    "d11_monkey_in_the_middle",
    "d12_hill_climbing",
    "d13_distress_signal",
    "d14_regolith",
    "d15_beacon_exclusive_zone"
]
