[package]
name = "aoc_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aoc_utils"
crate-type = ["rlib", "cdylib"]

[dependencies]
chrono = "0.4"
scraper = "0.13"
pyo3 = { version = "0.17.3", features = ["extension-module"] }
pyo3-asyncio = { version = "0.17.0", features = ["tokio-runtime"] }
reqwest = "0.11"
tokio = "1.23"
